[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/art/placeholders.png" type="Texture" id=1]
[ext_resource path="res://game_screen/player.gd" type="Script" id=2]
[ext_resource path="res://game_screen/mirror_tile_map.gd" type="Script" id=3]
[ext_resource path="res://game_screen/level.gd" type="Script" id=4]
[ext_resource path="res://util/shaker.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "placeholders.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.8, 7.8 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=9]
0/name = "placeholders.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 32, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 8 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Level1" type="Node2D"]
script = ExtResource( 4 )

[node name="Left" type="Node2D" parent="."]

[node name="LeftTileMap" type="TileMap" parent="Left"]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, 65535, 0, 0, 19, 0, 0, 131071, 0, 0, 65555, 0, 0, 196607, 0, 0, 131091, 0, 0, 262143, 0, 0, 196627, 0, 0, 327679, 0, 0, 262163, 0, 0, 393215, 0, 0, 327699, 0, 0, 458751, 0, 0, 393235, 0, 0, 524287, 0, 0, 458771, 0, 0, 589823, 0, 0, 524307, 0, 0, 655359, 0, 0, 589843, 0, 0, 720895, 0, 0, 655379, 0, 0, 786431, 0, 0, 720915, 0, 0, 851967, 0, 0, 786440, 0, 0, 786441, 0, 0, 786451, 0, 0, 917503, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851987, 0, 0, 983039, 0, 0, 917523, 0, 0, 1048575, 0, 0, 983048, 0, 0, 983049, 0, 0, 983052, 0, 0, 983053, 0, 0, 983059, 0, 0, 1114111, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048595, 0, 0, 1179647, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114131, 0, 0, 1245183, 0, 0, 1179667, 0, 0, 1310719, 0, 0, 1245203, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310739, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376275, 0, 0, 1507327, 0, 0, 1441792, 0, 0, 1441793, 0, 0, 1441794, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441798, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441811, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0 )

[node name="LeftPlayer" type="KinematicBody2D" parent="Left"]
position = Vector2( 8, 258 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="Left/LeftPlayer"]
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left/LeftPlayer"]
shape = SubResource( 10 )

[node name="CoyoteTimer" type="Timer" parent="Left/LeftPlayer"]
wait_time = 0.1
one_shot = true

[node name="LeftPlayerSpawn" type="Position2D" parent="Left"]
position = Vector2( 184, 313 )

[node name="Right" type="Node2D" parent="."]
position = Vector2( 640, 0 )
scale = Vector2( -1, 1 )

[node name="RightTileMap" type="TileMap" parent="Right"]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
script = ExtResource( 3 )
original_tile_map = NodePath("../../Left/LeftTileMap")

[node name="Darkness" type="TileMap" parent="Right" groups=["damage"]]
tile_set = SubResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0 )

[node name="RightPlayer" type="KinematicBody2D" parent="Right"]
position = Vector2( 8, 258 )
script = ExtResource( 2 )
is_mirror = true

[node name="Sprite" type="AnimatedSprite" parent="Right/RightPlayer"]
frames = SubResource( 7 )

[node name="CoyoteTimer" type="Timer" parent="Right/RightPlayer"]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/RightPlayer"]
position = Vector2( 0, 0.1 )
shape = SubResource( 10 )

[node name="RightPlayerSpawn" type="Position2D" parent="Right"]
position = Vector2( 8, 281 )

[node name="ScreenShaker" parent="." instance=ExtResource( 5 )]

[connection signal="died" from="Left/LeftPlayer" to="." method="_on_LeftPlayer_died"]
[connection signal="timeout" from="Left/LeftPlayer/CoyoteTimer" to="Left/LeftPlayer" method="_on_CoyoteTimer_timeout"]
[connection signal="died" from="Right/RightPlayer" to="." method="_on_RightPlayer_died"]
[connection signal="timeout" from="Right/RightPlayer/CoyoteTimer" to="Left/LeftPlayer" method="_on_CoyoteTimer_timeout"]
